Fixed readability issues, and added ability to move with buttons

--- a/presentation/style.css
+++ b/presentation/style.css
@@ -33,7 +33,8 @@ html, head, body {
 
   font-size: 2em;
 
-  background-color: white;
+  color: white;
+  background-color: #ff1111;
   padding: 10px;
   box-shadow: 0 -10px 20px 2px rgba(0, 0, 0, 0.7);
 
@@ -41,4 +42,8 @@ html, head, body {
 
   position: fixed;
   bottom: 0;
+}
+
+#caption a {
+  color: grey;
 }
